# stablecoin-premiums

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: 01_fetch_premiums.ipynb  02_batch_premiums_export.ipynb
src/stablecoin_premiums/: __init__.py  cli.py  compute.py  config.py
src/stablecoin_premiums/clients/: binance.py  coinapi.py  eldorado.py  xe.py
tests/: conftest.py  test_compute.py
